# Slime3D

./: .gitignore  CMakeLists.txt
engine/: CMakeLists.txt
engine/src/: Engine.cpp  Engine.h  Engine.hpp  GameManager.h  pch.cpp  pch.h  pch.hpp  system.h  system.hpp
engine/src/audio/: AudioHandler.cpp  AudioHandler.h  AudioHandler.hpp  AudioSample.cpp  AudioSample.h  AudioSource.cpp  AudioSource.h
engine/src/collision/: Collider.cpp  Collider.h  Collider.hpp  ColliderSet.cpp  ColliderSet.h  ColliderSet.hpp  CollisionHelper.cpp  CollisionHelper.h
engine/src/loop/: GameLoop.cpp  GameLoop.h  GameLoop.hpp  TickTask.h
engine/src/scene/: InputHandler.cpp  InputHandler.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
engine/src/scene/camera/: Camera.cpp  Camera.h  FirstPersonFlyCamera.cpp  FirstPersonFlyCamera.h
engine/src/scene/object/: BaseObject.cpp  BaseObject.h  LightObject.cpp  LightObject.h
engine/src/util/: AsyncLoader.hpp  EngineLog.cpp  EngineLog.h  Formatter.cpp  Formatter.h  Profiler.cpp  Profiler.h  UtilFunctions.cpp  UtilFunctions.h
engine/src/vulkan/: LogicalDevice.cpp  LogicalDevice.h  LogicalDevice.hpp  PhysicalDevice.cpp  PhysicalDevice.h  PhysicalDevice.hpp  RenderHandler.cpp  RenderHandler.h  RenderHandler.hpp  VulkanInstance.cpp  VulkanInstance.h  VulkanInstance.hpp  Window.cpp  Window.h  Window.hpp
engine/src/vulkan/command/: CommandBuffer.cpp  CommandBuffer.h  CommandBuffer.hpp  CommandBufferHolder.h  CommandBufferRecorder.h  CommandHelper.cpp  CommandHelper.h  CommandRecorderProvider.h
engine/src/vulkan/command/impl/: ClearScreenRecorder.cpp  ClearScreenRecorder.h
engine/src/vulkan/geometry/: Geometry.cpp  Geometry.h  Geometry.hpp  GeometryHandler.cpp  GeometryHandler.h  ModelHelper.cpp  ModelHelper.h  Vertex.cpp  Vertex.h  ViewportQuadGeometry.cpp  ViewportQuadGeometry.h
engine/src/vulkan/mesh/: Mesh.cpp  Mesh.h
engine/src/vulkan/module/: RenderModule.cpp  RenderModule.h
engine/src/vulkan/module/lighting/: LightingPipeline.cpp  LightingPipeline.h  LightingRenderModule.cpp  LightingRenderModule.h  LightingRenderPass.cpp  LightingRenderPass.h  LightingRenderRecorder.cpp  LightingRenderRecorder.h  LightingUniformHandler.cpp  LightingUniformHandler.h  LightingUniformHandler.hpp
engine/src/vulkan/module/mrt/: MRTPipeline.cpp  MRTPipeline.h  MRTRenderModule.cpp  MRTRenderModule.h  (+7 more)
engine/src/vulkan/pipeline/: PipelineHelper.cpp  PipelineHelper.h  RenderPipeline.cpp  RenderPipeline.h
engine/src/vulkan/renderpass/: RenderPass.cpp  RenderPass.h
engine/src/vulkan/scene/: BaseObject.hpp  Camera.hpp  Scene.hpp
engine/src/vulkan/swapchain/: SwapChain.cpp  SwapChain.h  SwapChain.hpp  SwapChainHelper.cpp  SwapChainHelper.h
engine/src/vulkan/texture/: Texture.cpp  Texture.h  TextureHandler.cpp  TextureHandler.h  TextureHandler.hpp  TextureHelper.cpp  TextureHelper.h  TextureInfo.h  TextureSampler.cpp  TextureSampler.h
engine/src/vulkan/uniform/: UniformHandler.h  UniformHandler.hpp
engine/src/vulkan/util/: AsyncLoader.hpp  BufferHelper.cpp  BufferHelper.h  EngineLog.hpp  ImageHelper.cpp  ImageHelper.h  ImageHelper.hpp  Invalidatable.cpp  Invalidatable.h  Profiler.hpp
(+45 files in other folders)
